	* content/sifixes/src/cutscenes/fawn_trial.uc: Use symbolic constant.
	* usecode/compiler/basic_block.h: Handle all opcode cases.
	* usecode/compiler/{test1.uc,ucdefs.h}: Updating test usecode.
	* usecode/ucxt/src/ucfunc.cc: Output local statics with an 'l' prefix.
	* usecode/compiler/ucparse.yy: Allow implicit pushing of 'item' for original
	  usecode function calls.

2013-05-15 Dominik Reichardt <dominus@users.sourceforge.net>
	* keyactions.cc: different messages for toggling fullscreen mode

2013-05-13	Malignant Manor <malignantmanor@users.sourceforge.net>
	* actors.cc: Fix charmed_more_difficult breaking double clicking on npcs
	  (r7343 regression)

2013-04-12 Dominik Reichardt <dominus@users.sourceforge.net>
	* schedule.cc: fixed looping change of patrol schedule to patrol in SI, setting 
	  it to loiter instead if preset schedule is patrol or if there are no presets.
	* gamewin.cc: only allow background sfx tracks for oggs and MT32Emu. The tracks
	  do not play nicely for normal midi devices. Should probably be allowed for
	  MT32 and FakeMT32 conversions as well.

2013-04-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* usecode/ucinternal.cc: reverted fix for "error case of opcode CALLMS" of 
	  rev. 7363 to fix keyring in BG Keyring mod.
	
2013-02-24  Malignant Manor <malignantmanor@users.sourceforge.net>
	* Fix bug where any npcs would attack the Avatar when attack_avatar was
	  called and there are no guards in the area. Also don't have npcs with the
	  guard shape automatically attack in attack_avatar if in a dungeon.

2013-02-10	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/compiler/ucparse.yy: Eliminated needless sprintfs.

2013-02-09	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* usecode/*: Changed CMPG and CMPL opcodes to CMPGT and CMPLT. Fixed usecode
	  stack buffer overrun (with potentially disastrous results) implicit in the
	  CALLE/CALLE32/CALLO opcodes. This bug also caused the CALLO opcode to fail