@@ -8,6 +8,8 @@
 	* usecode/ucxt/src/ucfunc.cc: Output local statics with an 'l' prefix.
 	* usecode/compiler/ucparse.yy: Allow implicit pushing of 'item' for original
 	  usecode function calls.
+	* schedule.cc: Fixed bug #1847 "SI: Ghosts in cave talk as Chaos Hierophant"
+	  using Dominus' workaround.
 
 2013-05-15 Dominik Reichardt <dominus@users.sourceforge.net>
 	* keyactions.cc: different messages for toggling fullscreen mode
